Mut4All/bug-labels/rust/A-save-analysis/69416.txt
Issue Title:
ICE -Zsave-analysis issue-3763.rs · Issue #69416 · rust-lang/rust · GitHub

Rust Code:
mod my_mod {
    pub struct MyStruct {
        priv_field: isize
    }
    pub fn MyStruct () -> MyStruct {
        MyStruct {priv_field: 4}
    }
    impl MyStruct {
        fn happyfun(&self) {}
    }
}

fn main() {
    let my_struct = my_mod::MyStruct();
    let _woohoo = (&my_struct).priv_field;
    //~^ ERROR field `priv_field` of struct `my_mod::MyStruct` is private

    let _woohoo = (Box::new(my_struct)).priv_field;
    //~^ ERROR field `priv_field` of struct `my_mod::MyStruct` is private

    (&my_struct).happyfun();               //~ ERROR method `happyfun` is private

    (Box::new(my_struct)).happyfun();          //~ ERROR method `happyfun` is private
    let nope = my_struct.priv_field;
    //~^ ERROR field `priv_field` of struct `my_mod::MyStruct` is private
}

Bug Trace:
error[E0616]: field `priv_field` of struct `my_mod::MyStruct` is private
  --> src/test/ui/issues/issue-3763.rs:15:19
   |
15 |     let _woohoo = (&my_struct).priv_field;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^

error[E0616]: field `priv_field` of struct `my_mod::MyStruct` is private
  --> src/test/ui/issues/issue-3763.rs:18:19
   |
18 |     let _woohoo = (Box::new(my_struct)).priv_field;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0624]: method `happyfun` is private
  --> src/test/ui/issues/issue-3763.rs:21:18
   |
21 |     (&my_struct).happyfun();               //~ ERROR method `happyfun` is private
   |                  ^^^^^^^^

error[E0624]: method `happyfun` is private
  --> src/test/ui/issues/issue-3763.rs:23:27
   |
23 |     (Box::new(my_struct)).happyfun();          //~ ERROR method `happyfun` is private
   |                           ^^^^^^^^

error[E0616]: field `priv_field` of struct `my_mod::MyStruct` is private
  --> src/test/ui/issues/issue-3763.rs:24:16
   |
24 |     let nope = my_struct.priv_field;
   |                ^^^^^^^^^^^^^^^^^^^^

thread 'rustc' panicked at 'called `Option::unwrap()` on a `None` value', src/librustc_save_analysis/lib.rs:535:37
stack backtrace:
   0: backtrace::backtrace::libunwind::trace
             at /cargo/registry/src/github.com-1ecc6299db9ec823/backtrace-0.3.44/src/backtrace/libunwind.rs:86
   1: backtrace::backtrace::trace_unsynchronized
             at /cargo/registry/src/github.com-1ecc6299db9ec823/backtrace-0.3.44/src/backtrace/mod.rs:66
   2: std::sys_common::backtrace::_print_fmt
             at src/libstd/sys_common/backtrace.rs:78
   3: <std::sys_common::backtrace::_print::DisplayBacktrace as core::fmt::Display>::fmt
             at src/libstd/sys_common/backtrace.rs:59
   4: core::fmt::write
             at src/libcore/fmt/mod.rs:1052
   5: std::io::Write::write_fmt
             at src/libstd/io/mod.rs:1428
   6: std::sys_common::backtrace::_print
             at src/libstd/sys_common/backtrace.rs:62
   7: std::sys_common::backtrace::print
             at src/libstd/sys_common/backtrace.rs:49
   8: std::panicking::default_hook::{{closure}}
             at src/libstd/panicking.rs:204
   9: std::panicking::default_hook
             at src/libstd/panicking.rs:224
  10: rustc_driver::report_ice
  11: std::panicking::rust_panic_with_hook
             at src/libstd/panicking.rs:474
  12: rust_begin_unwind
             at src/libstd/panicking.rs:378
  13: core::panicking::panic_fmt
             at src/libcore/panicking.rs:85
  14: core::panicking::panic
             at src/libcore/panicking.rs:52
  15: rustc_save_analysis::SaveContext::get_expr_data
  16: <rustc_save_analysis::dump_visitor::DumpVisitor as syntax::visit::Visitor>::visit_expr
  17: <rustc_save_analysis::dump_visitor::DumpVisitor as syntax::visit::Visitor>::visit_item
  18: <rustc_save_analysis::dump_visitor::DumpVisitor as syntax::visit::Visitor>::visit_mod
  19: rustc::dep_graph::graph::DepGraph::with_ignore
  20: rustc_session::utils::<impl rustc_session::session::Session>::time
  21: rustc::ty::context::tls::enter_global
  22: rustc_interface::interface::run_compiler_in_existing_thread_pool
note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.

error: internal compiler error: unexpected panic

note: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/blob/master/CONTRIBUTING.md#bug-reports

note: rustc 1.43.0-nightly (436494b8f 2020-02-22) running on x86_64-unknown-linux-gnu

note: compiler flags: -Z save-analysis

query stack during panic:
end of query stack
error: aborting due to 5 previous errors

Some errors have detailed explanations: E0616, E0624.
For more information about an error, try `rustc --explain E0616`.

Bug Labels:
A-save-analysis, C-bug, I-ICE, T-compiler
